[freecad] Give FreeCAD its own heading.

--- a/dotfiles.org
+++ b/dotfiles.org
@@ -69,6 +69,13 @@ Define personal channel.
   CopyArrivalDate yes
 #+END_SRC
 
+* FreeCAD
+Ensure FreeCAD's packages are found.
+
+#+BEGIN_SRC conf :tangle .config/environment.d/50-freecad.conf
+  PYTHONPATH=/usr/lib/freecad/lib${PYTHONPATH:+:$PYTHONPATH}
+#+END_SRC
+
 * Git
 :PROPERTIES:
 :header-args+: :tangle .config/git/config
@@ -379,13 +386,6 @@ Move data directory out of the way.
 
 #+BEGIN_SRC conf :tangle .config/environment.d/50-nltk.conf
   NLTK_DATA=${XDG_DATA_HOME:-$HOME/.local/share}/nltk/data
-#+END_SRC
-
-* Python
-Ensure FreeCAD's packages are found.
-
-#+BEGIN_SRC conf :tangle .config/environment.d/50-python.conf
-  PYTHONPATH=/usr/lib/freecad/lib${PYTHONPATH:+:$PYTHONPATH}
 #+END_SRC
 
 * Steam
